apps/postgres/50.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgres
  labels:
    app.kubernetes.io/component: postgres
    app.kubernetes.io/name: postgres
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: postgres
      app.kubernetes.io/name: postgres
      prometheus.monitoring/service: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/component: postgres
        app.kubernetes.io/name: postgres
        prometheus.monitoring/service: postgres
    spec:
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: pvc-postgres
            readOnly: false
      containers:
        - name: postgres
          image: registry.ubuntu.home/docker.io/postgres:17.6-alpine3.21
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
#      imagePullSecrets:
#        - name: regcred
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: s8.ubuntu.home
      serviceAccountName: postgres
      serviceAccount: postgres
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
#        runAsUser: 65534
#        runAsNonRoot: true
#        fsGroup: 65534
      schedulerName: default-scheduler
  hostAliases:
    - ip: 10.3.1.15
      hostnames:
        - s8.ubuntu.home
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
