apps/postgres/50.StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: pvc-postgres
      containers:
        - name: postgres
          image: registry.ubuntu.home/docker.io/postgres:17.6-alpine3.21
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 15
            periodSeconds: 20
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: s8.ubuntu.home
        kubernetes.io/os: linux
      serviceAccountName: postgres
      serviceAccount: postgres
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      schedulerName: default-scheduler
      hostAliases:
        - ip: 10.3.1.15
          hostnames:
            - s8.ubuntu.home
  serviceName: postgres
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
