apps/postgres/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  labels:
    app.kubernetes.io/component: postgres
    app.kubernetes.io/name: postgres
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/component: postgres
    app.kubernetes.io/name: postgres
  sessionAffinity: None
  type: ClusterIP
